# LA_ML-related

./: Cargo.toml  Heart_disease.ipynb  Untitled0.ipynb  handwrite_math_ops.ipynb  jet_fighter_classif.ipynb  llm.ipynb  machine_leanring_lr.ipynb  python_practice.ipynb  supervised_learning.ipynb  supervised_regression.ipynb
src/: main.rs  polynomial_reg.rs  random_lr.rs  simple_linear_reg_2.rs  simple_regression.rs
